# oxc-ast-mcp

./: Cargo.toml  README.md  ast-nodes.generated.json  generate-oxc_ast-nodes.mjs
src/: main.rs
src/tools/: check.rs  docs.rs  list.rs  mod.rs  parse.rs
